# parallel-probsat

./: CMakeLists.txt  LICENSE  README  config.hpp  manager.cpp  probsat.cpp  probsat.hpp  server.cpp  worker.cpp  worker_task.hpp
communication/: common.hpp  manager.hpp  manager_server.hpp  server.hpp  server_worker.hpp  worker.hpp
communication/cmd/: m2s_add_file.hpp  m2s_add_workers.hpp  m2s_terminate.hpp  req_max_transfer_size.hpp  s2m_disconnect.hpp  s2m_found_solution.hpp  s2m_send_statistics.hpp  s2w_activate_worker.hpp  s2w_send_instances.hpp  s2w_terminate.hpp  w2s_disconnect.hpp  w2s_done_processing.hpp  w2s_found_solution.hpp  w2s_get_instances.hpp  ws_typedefs.hpp
sat/: 3sat-clause.hpp  clause.hpp  cnf_formula.hpp  input.hpp  instance.hpp  random_generator.hpp
sat/probability_functions/: cached.hpp  exponential.hpp  parameters.txt  polynomial.hpp
tests/: demo_1.cmd  demo_2.cmd  gen_n50_m213_k3SAT_seed1511168162_mod_s257282_p8.44605646486143e-06.cnf  gen_n900_m3840_k3SAT_seed4244421687_mod_s6863228_p0.00972225738663696.cnf  k3-n60-m256-r4.267-s30730906_mod_s1750274_p8.0093584347461e-06.cnf  testcluster
util/: bitfield.hpp  parse_params.hpp  util.hpp
